--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=patchy
 spring.datasource.url=jdbc:mysql://localhost:3306/patchy?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=your_password_here
+spring.datasource.password=Holiday2/
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
