--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/patchy?useSSL=false&serverTime
 spring.datasource.username=root
 spring.datasource.password=Holiday2/
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
 spring.session.store-type=jdbc
