--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.session.jdbc.initialize-schema=always
 spring.session.jdbc.schema=classpath:org/springframework/session/jdbc/schema-mysql.sql
 spring.session.jdbc.table-name=SPRING_SESSION
 
-gemini.api.key=${GEMINI_API_KEY}
+gemini.api.key=${GOOGLE_API_KEY}
